# mirror-libghttp

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  config.h.in  release.csv  release.sh  release.txt
.github/: issue_template.md
CMake/: Utilities.cmake
cmd/: patch-configure.sh  patch-pld-linux.sh
doc/: libghttp.Doxyfile
include/: CMakeLists.txt
libghttp/: ChangeLog  configure.in.orig  ghttp.c  http_req.c  http_trans.c
src/: CMakeLists.txt  MAINTAINERS  configure.ac  ghttp.c  ghttp.h  ghttp_config.h.in  http_base64.c  http_config.h.in  http_date.c  http_global.h  http_hdrs.c  http_req.c  http_resp.c  http_trans.c  http_trans.h  http_uri.c
test/: Makefile  configure  test_all.c  test_http.c
tests/: CMakeLists.txt  test_ghttp.c  test_http.c  test_https.c
